--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Regna</title>
 	<link rel="stylesheet" href="./css/icon.css">
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/media.css">
 </head>
 <body>
 <header class="header">
@@ -42,6 +43,7 @@
 					exercitation ullamco
 					laboris nisi ut
 					aliquip ex ea commodo consequat.</p>
+
 				<div class="about-item">
 					<div class="about-icon"><span class="icon-briefcase-svgrepo-com"></span></div>
 					<div class="about-info">
@@ -50,6 +52,7 @@
 							tempore, cum soluta nobis est eligendi</p>
 					</div>
 				</div>
+
 				<div class="about-item">
 					<div class="about-icon"><span class="icon-checklist-svgrepo-com"></span></div>
 					<div class="about-info">
@@ -58,6 +61,7 @@
 							tempore, cum soluta nobis est eligendi</p>
 					</div>
 				</div>
+
 				<div class="about-item">
 					<div class="about-icon"><span class="icon-binoculars-svgrepo-com"></span></div>
 					<div class="about-info">
@@ -65,9 +69,10 @@
 						<p class="about-info-desc">Et harum quidem rerum facilis est et expedita distinctio. Nam libero
 							tempore, cum soluta nobis est eligendi</p>
 					</div>
+
 				</div>
 			</div>
-			<div class="col-6 col-6-bg"></div>
+			<div class="col-6 about-img"></div>
 		</div>
 	</div>
 </section>
@@ -371,5 +376,3 @@
 	<p class="footer-title">© Copyright <span class="footer-copy">REGNA</span>. All Rights Reserved</p>
 	<p class="footer-subtitle">Designed by <span class="footer-design">BootstrapMade</span></p>
 </footer>
-</body>
-</html>
