--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<meta name="viewport"
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>REGNA</title>
+	<title>Regna</title>
 	<link rel="stylesheet" href="./css/icon.css">
+	<link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="stylesheet" href="./css/media.css">
 </head>
@@ -22,6 +23,9 @@
 			<a class="menu-item" href="#portfolio">team</a>
 			<a class="menu-item" href="#contact">contact</a>
 		</nav>
+		<div class="burger">
+			<i class='bx bx-menu'></i>
+		</div>
 	</div>
 </header>
 <section id="hero" class="hero">
