--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<nav class="menu">
 			<a class="menu-item" href="#hero">home</a>
 			<a class="menu-item" href="#about">about</a>
-			<a class="menu-item" href="#facts">services</a>
-			<a class="menu-item" href="#services">portfolio</a>
-			<a class="menu-item" href="#portfolio">team</a>
+			<a class="menu-item" href="#services">services</a>
+			<a class="menu-item" href="#portfolio">portfolio</a>
+			<a class="menu-item" href="#team">team</a>
 			<a class="menu-item" href="#contact">contact</a>
 		</nav>
 		<div class="burger">
@@ -380,3 +380,7 @@
 	<p class="footer-title">© Copyright <span class="footer-copy">REGNA</span>. All Rights Reserved</p>
 	<p class="footer-subtitle">Designed by <span class="footer-design">BootstrapMade</span></p>
 </footer>
+
+<script src="./js/app.js"></script>
+</body>
+</html>
